# Project-1

./: README.md  pyproject.toml  requirements.txt
Crawl/: readme.md
Database/: readme.md
Machine Learning/: README.md
Statistical Analysis/: readme.md
data/: Leagues.csv  market_values.csv  players.csv  seasons.csv  team_income_expenditures.csv  teams.csv  transfers.csv
data/cleanized/: cards.csv  contracts.csv  goals.csv  leagues.csv  market_values.csv  matches.csv  penalties.csv  players.csv  seasons.csv  substitutions.csv  team_appearances.csv  team_income_expenditures.csv  teams.csv  transfers.csv
data/matches/: pt1.csv  pt2.csv  pt6.csv  pt7.csv
data/urls/: appearance_urls.csv  league_urls.csv  match_urls.csv  matchday_urls.csv  player_urls.csv  proxies.csv  team_urls.csv
docs/crawl/: Crawl.md  scrape_matches.md  webpage_urls.md
docs/db/: Entities.md  Entities.xmind  setup.md
docs/ml/: ML.ipynb
docs/statistics/: Statistics_Queries.ipynb  Statistics_Queries.py
scripts/: appearances.py  db_setup.py  match_players.py  matches.py  matches_pt1.py  matches_pt2.py  matches_pt3.py  matches_pt4.py  matches_pt5.py  matches_pt6.py  matches_pt7.py  store_cleanize_data.py
src/transfermarkt_analysis/: __init__.py  consts.py
src/transfermarkt_analysis/crawl/: Team.ipynb  __init__.py  cleanizers.py  consts.py  crawl.py  crawler.py  initializers.py  match_crawler.py  structs.py  url_extractors.py
src/transfermarkt_analysis/db/: __init__.py  initializers.py  schema.py
src/transfermarkt_analysis/ml/: part2ML.py
(+23 files in other folders)
