[project]
name = "transfermarkt_analysis"
version = "0.0.1"
description = "do statistical analysis and ml on scraped data from transfermarkt.de"
readme = "README.md"
requires-python = ">=3.6"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[build.system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"